# banking

./: DockerFile  Dockerfile  README.md  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: main.yml
src/: build_app.py  config.py  main.py
src/dto/: account.py  person.py  transaction.py
src/entrypoint/: account.py  person.py  router.py  transactions.py
src/model/: account.py  person.py  transaction.py
src/repository/: account.py  database.py  transaction.py
src/service/: account.py  transaction.py
tests/: conftest.py  helpers.py  pytest.ini
tests/routes/: account.py  transaction.py
