[tool.poetry]
name = "banking-challenge"
version = "0.0.0"
description = "Simple banking operations resolution"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
pytest = "^6.2.5"
SQLAlchemy = "^1.4.28"
python-dotenv = "^0.19.2"
pytz = "^2021.3"
mypy = "^0.910"
flake8 = "^4.0.1"
black = "^21.12b0"
fastapi-utils = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
